--- a/web/index.html
+++ b/web/index.html
@@ -205,7 +205,7 @@
 
     </section>
 
-    <!--vew cars-->
+    <!--view cars-->
     <section id="vewCars" class="w-100 h-100" style="background-color: whitesmoke">
 
         <div class="container">
@@ -328,7 +328,7 @@
 
     </section>
 
-    <!--vew our services-->
+    <!--view our services-->
     <section id="services" class="w-100 h-100" style="background-color: white">
 
         <div class="container">
@@ -374,6 +374,309 @@
         </div>
 
     </section>
+
+    <!--Our Company-->
+    <section id="OurCompany" class="w-100 h-100" style="background-color: whitesmoke">
+
+        <div class="container">
+
+            <div class="row w-100 h-25 text-center mt-2">
+                <figure class="text-center mt-2 text-black">
+                    <blockquote class="blockquote" style="border: 1px solid transparent">
+                        <p class="display-1" style="font-family: emoji">ABOUT US</p>
+                    </blockquote>
+                    <figcaption class=" text-black mt-0" style="font-size: 20px">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="w-75 h-50 center-block mt-5">
+
+                <div class="container-fluid">
+                    <div class="row" >
+                        <div class="col me-5 ms-5" style="position: relative;top: 80px">
+                            <h1 class="text-center mb-4">Our Company</h1>
+                            <p class="text-center fs-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Adipisci, consectetur impedit itaque iusto nam quisquam quo tempora totam.
+                                Amet dignissimos, eveniet nobis nostrum optio sapiente tempore velit vero? Impedit, qui.
+                            </p>
+                        </div>
+
+                        <div class="col  me-5 ms-5 center-block"  style="width: 100%; height: 50vh">
+                            <img src="assets/images/photo-1494976388531-d1058494cdd8.jpg" alt="" class="img-thumbnail img-fluid img-responsive" style="width: 100%; height: 50vh">
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--Our History-->
+    <section id="OurHistory" class="w-100 h-100" style="background-color: white">
+
+        <div class="container">
+
+            <div class="w-75 h-50 center-block mt-5" style="position: relative;top: 100px">
+
+                <div class="container-fluid">
+                    <div class="row" >
+                        <div class="col  me-5 ms-5 center-block"  style="width: 100%; height: 50vh">
+                            <img src="assets/images/Self-Drive-Car-Rental-Agreement.jpg" alt="" class="img-thumbnail img-fluid img-responsive" style="width: 100%; height: 50vh">
+                        </div>
+
+                        <div class="col me-5 ms-5" style="position: relative;top: 80px">
+                            <h1 class="text-center mb-4">Our History</h1>
+                            <p class="text-center fs-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Adipisci, consectetur impedit itaque iusto nam quisquam quo tempora totam.
+                                Amet dignissimos, eveniet nobis nostrum optio sapiente tempore velit vero? Impedit, qui.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--Our Team-->
+    <section id="OurTeam" class="w-100 h-100" style="background-color: whitesmoke">
+
+        <div class="container">
+            <div class="row w-100 h-25 text-center mt-2">
+                <figure class="text-center mt-2 text-black">
+                    <blockquote class="blockquote" style="border: 1px solid transparent">
+                        <p class="display-1" style="font-family: emoji">OUR TEAM</p>
+                    </blockquote>
+                    <figcaption class=" text-black mt-0" style="font-size: 20px">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="row w-75 h-100 center-block">
+                <div class="col-xl-6 mb-4 center-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex align-items-center">
+                                    <img src="https://mdbootstrap.com/img/new/avatars/8.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
+                                    <div class="ms-3">
+                                        <p class="fw-bold mb-1">John Doe</p>
+                                        <p class="text-muted mb-0">john.doe@gmail.com</p>
+                                    </div>
+                                </div>
+                                <span>Fonder</span>
+                            </div>
+                        </div>
+                        <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Message
+                                <i class="fas fa-envelope ms-2"></i>
+                            </a>
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Call
+                                <i class="fas fa-phone ms-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 mb-4 center-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex align-items-center">
+                                    <img src="https://mdbootstrap.com/img/new/avatars/6.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
+                                    <div class="ms-3">
+                                        <p class="fw-bold mb-1">Alex Ray</p>
+                                        <p class="text-muted mb-0">alex.ray@gmail.com</p>
+                                    </div>
+                                </div>
+                                <span>CEO</span>
+                            </div>
+                        </div>
+                        <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Message
+                                <i class="fas fa-envelope ms-2"></i>
+                            </a>
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Call<i class="fas fa-phone ms-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 mb-4 center-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex align-items-center">
+                                    <img src="https://mdbootstrap.com/img/new/avatars/7.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
+                                    <div class="ms-3">
+                                        <p class="fw-bold mb-1">Kate Hunington</p>
+                                        <p class="text-muted mb-0">kate.hunington@gmail.com</p>
+                                    </div>
+                                </div>
+                                <span>Manager</span>
+                            </div>
+                        </div>
+                        <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Message
+                                <i class="fas fa-envelope ms-2"></i>
+                            </a>
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Call
+                                <i class="fas fa-phone ms-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 mb-4 center-block">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex align-items-center">
+                                    <img src="https://mdbootstrap.com/img/new/avatars/3.jpg" alt="" style="width: 45px; height: 45px" class="rounded-circle"/>
+                                    <div class="ms-3">
+                                        <p class="fw-bold mb-1">Michael Bale</p>
+                                        <p class="text-muted mb-0">michael.bale@gmail.com</p>
+                                    </div>
+                                </div>
+                                <span>Manager</span>
+                            </div>
+                        </div>
+                        <div class="card-footer border-0 bg-light p-2 d-flex justify-content-around">
+                            <a class="btn btn-link m-0 text-reset" href="#"role="button" data-ripple-color="primary">
+                                Message
+                                <i class="fas fa-envelope ms-2"></i>
+                            </a>
+                            <a class="btn btn-link m-0 text-reset" href="#" role="button" data-ripple-color="primary">
+                                Call
+                                <i class="fas fa-phone ms-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--Customer Testimony-->
+    <section id="Testimony" class="w-100 h-100" style="background-color: white">
+
+        <div class="container">
+
+            <div class="row w-100 h-25 text-center mt-2">
+                <figure class="text-center mt-2 text-black">
+                    <blockquote class="blockquote" style="border: 1px solid transparent">
+                        <p class="display-1" style="font-family: emoji">CUSTOMER TESTIMONY</p>
+                    </blockquote>
+                    <figcaption class=" text-black mt-0" style="font-size: 20px">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="row w-100" style="height: 60%">
+                <div class="col ms-5 me-5 border-2 border-light thumbnail img-responsive shadow">
+                    <img src="assets/images/images.jpg" class="img-fluid rounded-circle center-block" alt="" style="width: 200px;height: 200px">
+                    <p class="text-center text-black fa-2x">James Ferdinandus</p>
+                    <p class="fs-4 text-black text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Commodi culpa dicta doloremque dolores laudantium necessitatibus odio optio ratione.
+                        Aperiam asperiores aspernatur at beatae consequatur, cum eius enim iure maiores qui.
+                    </p>
+                </div>
+                <div class="col ms-5 me-5 border-2 border-light thumbnail img-responsive shadow">
+                    <img src="assets/images/images%20(1).jpg" class="img-fluid rounded-circle center-block" alt="" style="width: 200px;height: 200px">
+                    <p class="text-center text-black fa-2x">Alex Besol</p>
+                    <p class="fs-4 text-black text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Commodi culpa dicta doloremque dolores laudantium necessitatibus odio optio ratione.
+                        Aperiam asperiores aspernatur at beatae consequatur, cum eius enim iure maiores qui.
+                    </p>
+                </div>
+                <div class="col ms-5 me-5 border-2 border-light thumbnail img-responsive shadow">
+                    <img src="assets/images/cace257bc69b0a79e4eaf25b82490c7b.jpg" class="img-fluid rounded-circle center-block" alt="" style="width: 200px;height: 200px">
+                    <p class="text-center text-black fa-2x">Amanda Koorey</p>
+                    <p class="fs-4 text-black text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Commodi culpa dicta doloremque dolores laudantium necessitatibus odio optio ratione.
+                        Aperiam asperiores aspernatur at beatae consequatur, cum eius enim iure maiores qui.
+                    </p>
+                </div>
+                <div class="col ms-5 me-5 border-2 border-light thumbnail img-responsive shadow">
+                    <img src="assets/images/images%20(2).jpg" class="img-fluid rounded-circle center-block" alt="" style="width: 200px;height: 200px">
+                    <p class="text-center text-black fa-2x">Tifiny Jay</p>
+                    <p class="fs-4 text-black text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Commodi culpa dicta doloremque dolores laudantium necessitatibus odio optio ratione.
+                        Aperiam asperiores aspernatur at beatae consequatur, cum eius enim iure maiores qui.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--Blog-->
+    <section id="Blog" class="w-100 h-100" style="background-color: whitesmoke">
+
+        <div class="container">
+
+            <div class="row w-100 h-25 text-center mt-2">
+                <figure class="text-center mt-2 text-black">
+                    <blockquote class="blockquote" style="border: 1px solid transparent">
+                        <p class="display-1" style="font-family: emoji">BLOG</p>
+                    </blockquote>
+                    <figcaption class=" text-black mt-0" style="font-size: 20px">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="row w-100 mb-5" style="height: 25%;">
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/photo-1494976388531-d1058494cdd8.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/1200x-1.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/download%20(1).gif" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+            </div>
+
+            <div class="row w-100" style="height: 25%;position: relative;top: 10px;">
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/download%20(1).gif" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/1200x-1.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+                <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
+                    <img src="assets/images/photo-1494976388531-d1058494cdd8.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!---->
 
     <!--Login Page-->
     <section id="LoginPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
@@ -2597,7 +2900,7 @@
 
 
     </section>
-    
+
 
     <!--<section id="CustomerDashBoard" style="width: 100%; height: 250% ;background-color: whitesmoke;">
 
