add copyright page

--- a/web/index.html
+++ b/web/index.html
@@ -676,7 +676,123 @@
 
     </section>
 
-    <!---->
+    <!--Contact Page-->
+    <section id="contactInfoPage" class="w-100 h-100" style="background-color: white">
+
+        <div class="w-50 h-50 bg-warning" >
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col w-50 h-100 bg-success">
+                        <form>
+                            <!-- Name input -->
+                            <div class="form-outline mb-4">
+                                <input type="text" id="form4Example1" class="form-control" />
+                                <label class="form-label" for="form4Example1">Name</label>
+                            </div>
+
+                            <!-- Email input -->
+                            <div class="form-outline mb-4">
+                                <input type="email" id="form4Example2" class="form-control" />
+                                <label class="form-label" for="form4Example2">Email address</label>
+                            </div>
+
+                            <!-- Message input -->
+                            <div class="form-outline mb-4">
+                                <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                                <label class="form-label" for="form4Example3">Message</label>
+                            </div>
+
+                            <!-- Checkbox -->
+                            <div class="form-check d-flex justify-content-center mb-4">
+                                <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                                <label class="form-check-label" for="form4Example4">
+                                    Send me a copy of this message
+                                </label>
+                            </div>
+
+                            <!-- Submit button -->
+                            <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+                        </form>
+                    </div>
+                    <div class="col w-50 h-100 bg-primary">d</div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--CopyRight Page-->
+    <section id="CopyRightPage" class="w-100 h-100" style="background-color: whitesmoke">
+        <div class="bg-black w-100 h-75" style="position: relative;top: 25%">
+
+            <div class="container-fluid mb-5 mt-5" style="width: 100%;height: 50%;position: relative;top: 20%;">
+                <div class="row w-100">
+                    <div class="col-12 border-2 border-danger ms-2 me-2 center-block" style="width: 40%">
+                        <div class="w-75">
+                            <h2 class="text-center text-white">About Us</h2>
+                            <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                A amet aperiam, blanditiis cumque eveniet, magni, minima
+                                mollitia officia quasi quod rem similique tempora! Eos, in, veritatis.
+                                Esse ipsum porro provident?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col border-2 border-danger ms-2 me-2 w-25">
+                        <h5 class=" text-white">Quick Links</h5>
+                        <ul class="list-group-light">
+                            <li class="text-white border-0"><a href="#">Home</a></li>
+                            <li class="text-white border-0"><a href="#">Cars</a></li>
+                            <li class="text-white border-0"><a href="#">Services</a></li>
+                            <li class="text-white border-0"><a href="#">About Us</a></li>
+                            <li class="text-white border-0"><a href="#">Blog</a></li>
+                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col border-2 border-danger ms-2 me-2 w-25">
+                        <h5 class=" text-white">Quick Links</h5>
+                        <ul class="list-group-light">
+                            <li class="text-white border-0"><a href="#">Home</a></li>
+                            <li class="text-white border-0"><a href="#">Cars</a></li>
+                            <li class="text-white border-0"><a href="#">Services</a></li>
+                            <li class="text-white border-0"><a href="#">About Us</a></li>
+                            <li class="text-white border-0"><a href="#">Blog</a></li>
+                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col border-2 border-danger ms-2 me-2 w-25">
+                        <h5 class=" text-white">Quick Links</h5>
+                        <ul class="list-group-light">
+                            <li class="text-white border-0"><a href="#">Home</a></li>
+                            <li class="text-white border-0"><a href="#">Cars</a></li>
+                            <li class="text-white border-0"><a href="#">Services</a></li>
+                            <li class="text-white border-0"><a href="#">About Us</a></li>
+                            <li class="text-white border-0"><a href="#">Blog</a></li>
+                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col border-2 border-danger ms-2 me-2 w-25">
+                        <h5 class=" text-white">Quick Links</h5>
+                        <ul class="list-group-light">
+                            <li class="text-white border-0"><a href="#">Home</a></li>
+                            <li class="text-white border-0"><a href="#">Cars</a></li>
+                            <li class="text-white border-0"><a href="#">Services</a></li>
+                            <li class="text-white border-0"><a href="#">About Us</a></li>
+                            <li class="text-white border-0"><a href="#">Blog</a></li>
+                            <li class="text-white border-0"><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="divider-horizontal-blurry mt-0" />
+
+            <div class="mb-5 center-block">
+                <h5 class="text-center text-white mt-5">Copyright @2022 All rights reserved</h5>
+            </div>
+
+        </div>
+    </section>
 
     <!--Login Page-->
     <section id="LoginPage" style="width: 100%;height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
